--- a/src/components/Gallery/gallery.module.css
+++ b/src/components/Gallery/gallery.module.css
@@ -1,3 +1,8 @@
-.family {
-  flex: 1;
+main {
+  max-width: 1280px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
